# lect_options_and_mm

./: .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  00_goals.ipynb  01_intuition_of_pricing.ipynb  02_no_model_pricing.ipynb  03_binomial_model.ipynb  04_continuous_model.ipynb  05_call_option.ipynb  README.md  jupyter_notebook_config.json  main.ipynb  pyproject.toml
binder/: postBuild  requirements.txt
data/: faircoin_fr.dot
data/graphviz/: binomial.dot  binomial_riskneutral.dot  faircoin_fr.dot
data/market/: 2016-01-01_2022-05-22_ethereumprice_org.csv  2017-05-23_2022-05-20_SPX_nasdaq_com.csv
data/tests/requests/: arbitrum_block_request_content.txt
install/: install.sh
scripts/: call.py  call_greeks.py  call_hedge.py  eth_dex_data_build.py  eth_dex_option.py  eth_histo.py  plot.py  poetry_scripts.py  spx_histo.py
src/: arbitrum.py  black_scholes.py  colnames.py  data_loaders.py  option_hedger.py  paths.py  payoffs.py  plot_utils.py
tests/: arbitrum_test.py  black_and_scholes_test.py  option_hedger_test.py  paths_test.py  payoffs_test.py
