[tool.poetry]
name = "Options and Market Making"
version = "0.1.0"
description = "Options and Market Making presentation material"
authors = ["Guillaume Garchery <polluxxx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
numpy = "^1.22.3"
graphviz = "^0.20"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
